salesforce/force-app/main/default/objects/Contact/fields/AssignedSalesRep__c.field-meta.xml
<CustomField>
    <fullName>AssignedSalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales representative assigned to Contact.</description>
    <inlineHelpText>Lookup the User owning the sales relationship.</inlineHelpText>
    <label>Assigned Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Contacts</relationshipLabel>
    <relationshipName>Assigned_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>