salesforce/force-app/main/default/objects/Contact/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <description>Simulated credit score for financing scenarios.</description>
    <inlineHelpText>Enter a plausible numeric score (e.g., 580–800).</inlineHelpText>
    <label>Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>