salesforce/force-app/main/default/objects/Contact/fields/CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CustomerSince__c</fullName>
    <description>Date the Contact became a customer.</description>
    <inlineHelpText>Choose the original first-purchase date.</inlineHelpText>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>