salesforce/force-app/main/default/objects/Contact/fields/DL_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DL_ExpirationDate__c</fullName>
    <description>Driver license expiration date.</description>
    <inlineHelpText>Must be a future date for valid licenses.</inlineHelpText>
    <label>DL Expiration Date</label>
    <type>Date</type>
</CustomField>