salesforce/force-app/main/default/objects/Contact/fields/DriversLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>DriversLicenseNumber__c</fullName>
    <description>Simulated driver license identifier.</description>
    <inlineHelpText>Enter a fake DL format consistent with locale policy.</inlineHelpText>
    <label>Driver&apos;s License Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>