salesforce/force-app/main/default/objects/Contact/fields/EV_Preference__c.field-meta.xml
<CustomField>
    <fullName>EV_Preference__c</fullName>
    <description>Shopping preference (EV/Luxury/Budget/NoPref).</description>
    <inlineHelpText>Choose the preference segment for targeting.</inlineHelpText>
    <label>EV Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>NoPref</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>