salesforce/force-app/main/default/objects/Contact/fields/MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>MarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email/SMS marketing consent.</description>
    <inlineHelpText>Check if the Contact consented to marketing.</inlineHelpText>
    <label>Marketing Opt In</label>
    <type>Checkbox</type>
</CustomField>