salesforce/force-app/main/default/objects/Contact/fields/PreferredCommunication__c.field-meta.xml
<CustomField>
    <fullName>PreferredCommunication__c</fullName>
    <description>Primary communication channel preference.</description>
    <inlineHelpText>Select Email, SMS, or Phone.</inlineHelpText>
    <label>Preferred Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>