salesforce/force-app/main/default/objects/Contact/fields/TotalLifetimeValue__c.field-meta.xml
<CustomField>
    <fullName>TotalLifetimeValue__c</fullName>
    <description>Aggregate lifetime revenue attributed to this Contact.</description>
    <inlineHelpText>Auto/rollup recommended; do not enter manually in production.</inlineHelpText>
    <label>Total Lifetime Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>