salesforce/force-app/main/default/objects/Contact/validationRules/DL_Expiration.validationRule-meta.xml
<ValidationRule>
    <fullName>DL_Expiration</fullName>
    <active>true</active>
    <description>Contact.DL_Expiration policy description.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(DL_ExpirationDate__c)), DL_ExpirationDate__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>DL_ExpirationDate__c</errorDisplayField>
    <errorMessage>Driver&apos;s License expiration must be in the future.</errorMessage>
</ValidationRule>